redis-lab-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fastapi-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: redis-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
